--- a/F-Zero Website/index.html
+++ b/F-Zero Website/index.html
@@ -31,10 +31,9 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>F-Zero Re-Creation Project</h1>
-									<p>Further Details On My <a href="#" target = "_">LinkedIn Article</a> On Re-Creating F-Zero's Controls</p>
+									<p>Further Details On My <a href="#" target= "_blank">LinkedIn Article</a> On Re-Creating F-Zero's Controls</p>
 								</header>
 								<a href="#work" class="jumplink pic">
-									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
 									<img src="images/me.jpg" alt="" />
 								</a>
 							</article>
@@ -42,12 +41,10 @@
 						<!-- Work -->
 							<article id="work" class="panel">
 								<header>
-									<h2>Work</h2>
+									<h2>Images And Videos</h2>
 								</header>
 								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
+									Summary of details here
 								</p>
 								<section>
 									<div class="row">
@@ -94,29 +91,12 @@
 						<!-- Contact -->
 							<article id="contact" class="panel">
 								<header>
-									<h2>Contact Me</h2>
+									<h2>Concepts Developed</h2>
 								</header>
-								<form action="#" method="post">
-									<div>
-										<div class="row">
-											<div class="col-6 col-12-medium">
-												<input type="text" name="name" placeholder="Name" />
-											</div>
-											<div class="col-6 col-12-medium">
-												<input type="text" name="email" placeholder="Email" />
-											</div>
-											<div class="col-12">
-												<input type="text" name="subject" placeholder="Subject" />
-											</div>
-											<div class="col-12">
-												<textarea name="message" placeholder="Message" rows="6"></textarea>
-											</div>
-											<div class="col-12">
-												<input type="submit" value="Send Message" />
-											</div>
-										</div>
-									</div>
-								</form>
+								 
+								<p>
+									Explanation here
+								</p>
 							</article>
 
 					</div>
