--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 							<header>
 								<h2 class="alt"> A Portfolio Of Work</h2>
 								<p>
-									Welcome to my portfolio, contained within these pages are details on each major project I have developed so far </br>
-									As well as an about me section at the bottom.
+									Welcome to my portfolio </br> 
+									Contained within these pages are details on each major project I have developed so far, as well as an about me section at the bottom.
 								</p>
 							</header>
 						</div>
