--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 									
 								<div class="col-4 col-12-mobile">						
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/F-Zero.png" alt="" /></a>
 										<header>
 											<h3>F-Zero</h3>
 										</header>
