--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://www.linkedin.com/in/brandon-m-j-roberts/" target = "_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://twitter.com/BrandonRob3rts" target = "_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://github.com/BrandonMJRoberts" target = "_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						</ul>
 
 				</div>
