--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt"> A Portfolio Of Work</h2>
+								<h2 class="alt"> Brandon Roberts</h2>
 								<p>
-									Welcome to my portfolio </br> 
-									Contained within these pages are details on each major project I have developed so far, as well as an about me section at the bottom.
+									Welcome to my portfolio! </br> 
+									This portfolio contains many details on each major project I have developed so far, as well as an about me section at the bottom of this page.
 								</p>
 							</header>
 						</div>
