--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="Super Mario 3/index.html" target = "_blank" class="image fit"><img src="images/Mario Bros 3.jpg" alt="" /></a>
+										<a href="Super Mario 3/index.html" target = "_blank" class="image fit"><img src="images/Super Mario Bros 3 Image.png" alt="" /></a>
 										<header>
 											<h3>Super Mario 3</h3>
 										</header>
