--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 								<h2 class="alt"> Brandon Roberts</h2>
 								<p>
 									Welcome to my portfolio! </br> 
-									This portfolio contains many details on each major project I have developed so far, as well as an about me section at the bottom of this page.
+									This portfolio contains many details on each major project I have developed so far </br> 
+									As well as an about me section at the bottom of this page.
 								</p>
 							</header>
 						</div>
