--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 									
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="Rituals/index.html" target = "_blank" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="Rituals/index.html" target = "_blank" class="image fit"><img src="images/Rituals Image.png" alt="" /></a>
 										<header>
 											<h3>Rituals: Book Of Skog</h3>
 										</header>
