--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 									<article class="item">
 										<a href="Super Mario 3/index.html" target = "_blank" class="image fit"><img src="images/Super Mario Bros 3 Image.png" alt="" /></a>
 										<header>
-											<h3>Super Mario 3</h3>
+											<h3>Super Mario 3 Re-Creation</h3>
 										</header>
 									</article>
 								</div>
@@ -91,7 +91,7 @@
 									<article class="item">
 										<a href="F-Zero Website/index.html" target = "_blank" class="image fit"><img src="images/F-Zero.png" alt="" /></a>
 										<header>
-											<h3>F-Zero</h3>
+											<h3>F-Zero Re-Creation</h3>
 										</header>
 									</article>
 								</div>
