--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 									
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="Pacman/index.html" target = "_blank" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+										<a href="Pacman/index.html" target = "_blank" class="image fit"><img src="images/pacmanImage.png" alt="" /></a>
 										<header>
 											<h3>Pacman Re-Creation</h3>
 										</header>
