--- a/index.html
+++ b/index.html
@@ -144,9 +144,12 @@
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<!-- <a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a> -->
 
-							<p>Details on me.</p>
+							<p>Currently I am a first year computer games programming student studying at Staffordshire University, who worked as a programmer for a local mobile games company for 7 months during 2019/2020. </br>
+							During this time we developed and released two projects, Lost my Marbles, and Rituals: Book of Skog. Descriptions on what I was responsible for developing on those projects is detailed above. </br>
+							I have been developing projects in C++, using visual studio for around 4 years now. And during that time I have improved my programming ability through tasking myself with increasingly more difficult projects, in the form of game jams, or retro game recreations.
+							</p>
 
 						</div>
 					</section>
