--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 								<h2 class="alt"> Brandon Roberts</h2>
 								<p>
 									Welcome to my portfolio! </br> 
-									This portfolio contains many details on each major project I have developed so far. </br> 
-									As well as an about me section at the bottom of this page.
+									This portfolio contains details on each major project I have developed in my career so far. </br> 
+									There is also an about me section at the bottom of this page.
 								</p>
 							</header>
 						</div>
