--- a/Pacman/index.html
+++ b/Pacman/index.html
@@ -27,7 +27,7 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>Pacman</h1>
-									<p>Project To Re-create Pacman For Semester 1 Of University</p>
+									<p>Re-creation Of Pacman</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<img src="images/me.jpg" alt="Pacman Chased By Ghosts" />
