--- a/Pacman/index.html
+++ b/Pacman/index.html
@@ -113,10 +113,15 @@
 								</p>
 		
 								<div class="col-4 col-6-medium col-12-small">
-									<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
-									<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
+									<a href="#" class="image fit"><img src="images/BackgroundIndexMapping.png" alt=""></a>
 								</div>
-								
+		
+								<div class="col-4 col-6-medium col-12-small">
+									<a href="#" class="image fit"><img src="images/MazeParts0.jpg" alt=""></a>
+									<a href="#" class="image fit"><img src="images/MazeParts1.jpg" alt=""></a>
+									<a href="#" class="image fit"><img src="images/MazeParts2.jpg" alt=""></a>
+								</div>
+		
 								<header3 style="text-align:centre">
 									<b><u>Rendering Level Using Data Loaded In:</u></b>
 								</header3>
