--- a/Pacman/index.html
+++ b/Pacman/index.html
@@ -117,9 +117,9 @@
 								</div>
 		
 								<div class="col-4 col-6-medium col-12-small">
-									<a href="#" class="image fit"><img src="images/MazeParts0.jpg" alt=""></a>
-									<a href="#" class="image fit"><img src="images/MazeParts1.jpg" alt=""></a>
-									<a href="#" class="image fit"><img src="images/MazeParts2.jpg" alt=""></a>
+									<a class="image fit"><img src="images/MazeParts0.jpg"></a>
+									<a class="image fit"><img src="images/MazeParts1.jpg"></a>
+									<a class="image fit"><img src="images/MazeParts2.jpg"></a>
 								</div>
 		
 								<header3 style="text-align:centre">
