--- a/Pacman/index.html
+++ b/Pacman/index.html
@@ -107,7 +107,7 @@
 								</header2>
 								
 								<p>
-									One of my main aims whilst developing this project was to have the levels have the potential of being fully customised through just changing a text file, and maybe a sprite sheet. 
+									One of my main aims whilst developing this project was to have all levels have the potential of being fully customised through just changing a text file, and maybe a sprite sheet. 
 									Therefore, during the initial development stages I focused on not hard coding as much of the game as I could. The result from this is that a text file within a folder named 'BackgroundMaps', maps the sprite Indexes of the currently used sprite sheet found in the directory 'Textures/Backgrounds'.
 									This mapping of textures results in the following image on the left mapping to the result on the right, depending on which sprite sheet you use:
 								</p>
