--- a/Pacman/index.html
+++ b/Pacman/index.html
@@ -112,14 +112,16 @@
 									This mapping of textures results in the following image on the left mapping to the result on the right, depending on which sprite sheet you use:
 								</p>
 		
-								<div class="col-4 col-6-medium col-12-small">
-									<a href="#" class="image fit"><img src="images/BackgroundIndexMapping.png" alt=""></a>
-								</div>
-		
-								<div class="col-4 col-6-medium col-12-small">
-									<a class="image fit"><img src="images/MazeParts0.png"></a>
-									<a class="image fit"><img src="images/MazeParts1.png"></a>
-									<a class="image fit"><img src="images/MazeParts2.png"></a>
+								<div class="row">
+									<div class="col-4 col-6-medium col-12-small">
+										<a href="#" class="image fit"><img src="images/BackgroundIndexMapping.png" alt=""></a>
+									</div>
+
+									<div class="col-4 col-6-medium col-12-small">
+										<a class="image fit"><img src="images/MazeParts0.png"></a>
+										<a class="image fit"><img src="images/MazeParts1.png"></a>
+										<a class="image fit"><img src="images/MazeParts2.png"></a>
+									</div>
 								</div>
 		
 								<header3 style="text-align:centre">
