--- a/Pacman/index.html
+++ b/Pacman/index.html
@@ -113,8 +113,8 @@
 								</p>
 		
 								<div class="row">
-									<div class="col-4 col-6-medium col-12-small">
-										<a href="#" class="image fit"><img src="images/BackgroundIndexMappingFile.png" alt=""></a>
+									<div class="col-8 col-8-medium col-12-small">
+										<a class="image fit"><img src="images/BackgroundIndexMappingFile.png"></a>
 									</div>
 
 									<div class="col-4 col-6-medium col-12-small">
