--- a/Pacman/index.html
+++ b/Pacman/index.html
@@ -128,12 +128,11 @@
 								</header4>
 								
 								<p>
-									Of all the concepts I developed for this project, getting collision and player movement was by far the hardest of them all. But even with all of the pitfalls along the way, the final result turned out exactly as I had intended it, if not how i planned it. </br>
-									First of all I needed a way to set the collision for the level, however, as I was planning on making the levels almost fully customisable I couldnt hard code this as it would defeat the point of doing the prior work.
-									My solution to this was to have a seperate folder named 'CollisionMaps' and to put text files in there stating where in the level has collision and where doesnt. This allows for specific collision maps to be made for specific levels. </br>
-									Loading this data and storing it into the program was not difficult, however ensuring that the character moving around the level, be it a ghost or pacman, is always in the centre of the current row/column was a harder task than initially anticipated.
-									To solve this the player, whenever they change direction, is set to be in the centre of the axis perpendicular to the one they are going to be traveling down. And, in order for them to change direction they must be within a certain distance of the centre of their grid square. 
-									To ensure that there is no visable snapping to the new orientation. </br>
+									Of all the concepts I created for this project, handelling collision and player movement was by far the hardest of them all. But even with all of the pitfalls along the way, the final result turned out exactly as I had intended it, if not how i planned it. </br> </br>
+									First of all I needed a way to set the collision for the level that aligned with the plan to making the levels almost fully customisable. So I couldn't hard code the colision, as it would defeat the point of doing the prior work.
+									My solution to this was to have a seperate folder named 'CollisionMaps', and to put text files in there stating where in the level has collision and where doesn't. This allows for specific collision maps to be made for specific levels. </br> </br>
+									Loading this data and storing it into the program was not difficult, however, ensuring that the character moving around the level, be it a ghost or pacman, is always in the centre of the current row/column was a harder task than initially anticipated.
+									To solve this the player, whenever they change direction, is set to be in the centre of the axis perpendicular to the one they are going to be traveling along. And in order for them to change direction they must be within a certain distance of the centre of their grid square, to ensure that there is no obvious snapping to the new orientation. </br> </br>
 		
 									With this in place there were still some minior bugs. Such as if the player presses two valid directions at once, one axis was always priorisied over the other. And if the player is in a corner and is pressing two directions, one to leave the corner and one to remain. It was possible that the direction that prevents the player from moving would have been chosen. 
 									In order to remedy this I implemented a check whenever the player chooses a direction to go. This check determines if the chosen direction is valid, if not then it would fall into the next button press. This solves the second problem, but not the first.
