--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 								<h2 class="alt"> Brandon Roberts</h2>
 								<p>
 									Welcome to my portfolio! </br> 
-									This portfolio contains details on each major project I have developed in my career so far. </br> 
+									This portfolio contains images of projects I have developed, clicking them takes you to a sub-website that contains videos, images and a description as to what that project involved to create, and how I achieved that goal. </br> 
 									There is also an about me section at the bottom of this page.
 								</p>
 							</header>
