--- a/Pacman/index.html
+++ b/Pacman/index.html
@@ -121,7 +121,7 @@
 								</div>
 								
 								<header4 style="text-align:centre">
-									<b><u>Playable Character Collisions With Enviroment:</u></b>
+									<b><u>Enviroment collisions:</u></b>
 								</header4>
 								
 								<p>
