--- a/Super Mario 3/index.html
+++ b/Super Mario 3/index.html
@@ -33,9 +33,6 @@
 									<h1>Super Mario Bros 3</h1>
 									<p>A Re-creation Of The Classic Game</p>
 								</header>
-								<a href="#work" class="jumplink pic">
-									<img src="images/me.jpg" alt="" />
-								</a>
 							</article>
 
 						<!-- Work -->
@@ -94,9 +91,16 @@
 									<h2>Concepts Developed On This Project</h2>
 								</header>
 								
+                                                                <header2>
+                                                                        Introduction:
+                                                                </header2>
+
 								<p>
 									Here is where the concepts go.
 								</p>
+
+
+
 							</article>
 
 					</div>
