--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
 
 							<!-- <a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a> -->
 
-							<p align="left">Currently I am a first year computer games programming student studying at Staffordshire University, who worked as a programmer for a local mobile games company for 7 months during 2019/2020. Whilst at Curioso we used Unity extensivly, taking full advantage of the rendering, audio and animation systems contained within the engine.</br> </br>
-							During this time we developed and released two projects, Lost my Marbles, and Rituals: Book of Skog. Descriptions on what I was responsible for developing on those projects is detailed above. </br> </br>
-							I have been developing projects in C++, using visual studio for around 4 years now. And during that time I have improved my programming ability through tasking myself with increasingly more difficult projects, in the form of game jams, or retro game recreations.
+							<p align="left">I am currently I am a first year computer games programming student studying at Staffordshire University, who worked as a programmer for a local mobile games company, Curioso Games, for 7 months during 2019/2020. Whilst at Curioso we used Unity extensivly, taking full advantage of the rendering, audio and animation systems contained within the engine in order to create two of the games featured in this portfolio. </br>
+							These two games are Lost my Marbles and Rituals: Book of Skog.  </br> </br>
+							I have been programming projects in C++, using multiple versions of visual studio, for around 4 years now. During that time my programming knowledge and abilty has improved through tasking myself with increasingly more difficult projects over the years. These were in the form of game jams, retro game recreations or, most recently, developing projects for my degree.
 							</p>
 
 						</div>
