--- a/Pacman/index.html
+++ b/Pacman/index.html
@@ -86,7 +86,7 @@
 						<!-- Contact -->
 							<article id="contact" class="panel">
 								<header>
-									<h2>Main Concepts Developed</h2>
+									<h2> <u>Main Concepts Developed</u></h2>
 								</header>
 								
 								<header1 style="text-align:centre">
