--- a/Pacman/index.html
+++ b/Pacman/index.html
@@ -104,8 +104,8 @@
 								
 								<p>
 									One of my main aims whilst developing this project was to have all levels have the potential of being fully customised through just changing a text file, and maybe a sprite sheet. 
-									Therefore, during the initial development stages I focused on not hard coding as much of the game as I could. The result from this is that a text file within a folder named 'BackgroundMaps', which maps the sprite Indexes of the currently used sprite sheet found in the directory 'Textures/Backgrounds'.
-									This mapping of textures results in the following image on the left mapping to the result on the right, depending on which sprite sheet you use:
+									Therefore, during the initial development stages I focused on not hard coding as much of the game as I could. The result from this is that a text file within a folder named 'BackgroundMaps', which maps the sprite indexes of the sprite sheet found in the directory 'Textures/Backgrounds', that is currently being used. </br>
+									This mapping of textures results in the following images mapping to each other, depending on which sprite sheet you use: </br>
 								</p>
 		
 								<div class="row">
