--- a/Pacman/index.html
+++ b/Pacman/index.html
@@ -117,6 +117,10 @@
 										<a class="image fit"><img src="images/MazeParts1.png"></a>
 										<a class="image fit"><img src="images/MazeParts2.png"></a>
 									</div>
+									
+									<div class="col-6 col-6-medium col-12-small">
+										<a class="image fit"><img src="images/ExampleBackground.png"></a>
+									</div>
 								</div>
 								
 								<header4 style="text-align:centre">
