--- a/Pacman/index.html
+++ b/Pacman/index.html
@@ -36,11 +36,7 @@
 								<header>
 									<h2>Demo Images and Videos</h2>
 								</header>
-								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
-								</p>
+		
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
@@ -94,7 +90,7 @@
 								</header1>
 								
 								<p>
-									This project was developed for my level 4 semester 1 submission in a graphics module. This submission required usage of a university owned framework in order to create Pacman, or a very similar game. </br>
+									This project was developed as a level 4, semester 1 graphics module submission. This project required usage of a university owned framework in order to create Pacman, or a very similar game. </br>
 									As this was developed using an internal framework I, therefore, had never seen the framework code before, requiring me to work out of my comfort zone. Despite this though I was able to fully re-create the arcade version of Pacman, with the only exceptions of the between level animations, and the starting main menu screen.
 								</p>
 								
