--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p><u>Summary Of Portfolio</u></p>
+							<p><u>Portfolio Summary</u></p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
