--- a/Pacman/index.html
+++ b/Pacman/index.html
@@ -40,34 +40,34 @@
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/MainMenuPacman.png" alt=""></a>
+											<a class="image fit"><img src="images/MainMenuPacman.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/HighScorePacman.png" alt=""></a>
+											<a class="image fit"><img src="images/HighScorePacman.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/InGameExample1.png" alt=""></a>
+											<a class="image fit"><img src="images/InGameExample1.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/InGameExample2.png" alt=""></a>
+											<a class="image fit"><img src="images/InGameExample2.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/InGameExample3.png" alt=""></a>
+											<a class="image fit"><img src="images/InGameExample3.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/ExampleBackground.png" alt=""></a>
+											<a class="image fit"><img src="images/ExampleBackground.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/BackgroundIndexMappingFile.png" alt=""></a>
+											<a class="image fit"><img src="images/BackgroundIndexMappingFile.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/MazeParts0.png" alt=""></a>
+											<a class="image fit"><img src="images/MazeParts0.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/MazeParts1.png" alt=""></a>
+											<a class="image fit"><img src="images/MazeParts1.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/MazeParts2.png" alt=""></a>
+											<a class="image fit"><img src="images/MazeParts2.png" alt=""></a>
 										</div>
 									</div>
 								</section>
